--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header-inner">
-    <a class="logo" href="/">ORLAX</a>
+    <a class="logo" href="/">ARLIO</a>
     <nav>
       <a href="/guides" style="margin-right:18px;">Руководства</a>
       <a href="/categories">Категории</a>
