--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
-const { title = 'ORLAX — практичные руководства', description = '' } = Astro.props;
+
+const { title = 'ARLIO — практичные руководства', description = '' } = Astro.props;
 ---
 <!doctype html>
 <html lang="ru">
@@ -9,7 +10,8 @@ const { title = 'ORLAX — практичные руководства', descrip
     <title>{title}</title>
     <meta name="description" content={description} />
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/styles/global.css" />
+    <link rel="stylesheet" href="/styles/global.css">
+
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
