--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,9 @@
   <div class="header-inner">
     <a class="logo" href="/">ARLIO</a>
     <nav>
-      <a href="/guides" style="margin-right:18px;">Руководства</a>
-      <a href="/categories">Категории</a>
-      <a href="/about" style="margin-left:18px;">О проекте</a>
+      <a href="/guides.html" style="margin-right:18px;">Руководства</a>
+      <a href="/categories.html">Категории</a>
+      <a href="/about.html" style="margin-left:18px;">О проекте</a>
     </nav>
   </div>
 </header>
