--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -7,13 +7,13 @@ import Header from '../../components/Header.astro';
   <div class="container">
     <h1>Категории</h1>
     <ul>
-      <li><a href="/categories/tools">Инструменты</a></li>
-      <li><a href="/categories/home">Дом и ремонт</a></li>
-      <li><a href="/categories/materials">Материалы</a></li>
-      <li><a href="/categories/furniture">Мебель</a></li>
-      <li><a href="/categories/garden">Сад и дача</a></li>
-      <li><a href="/categories/energy">Энергия и отопление</a></li>
-      <li><a href="/categories/tech">Бытовая техника</a></li>
+      <li><a href="/categories/tools.html">Инструменты</a></li>
+      <li><a href="/categories/home.html">Дом и ремонт</a></li>
+      <li><a href="/categories/materials.html">Материалы</a></li>
+      <li><a href="/categories/furniture.html">Мебель</a></li>
+      <li><a href="/categories/garden.html">Сад и дача</a></li>
+      <li><a href="/categories/energy.html">Энергия и отопление</a></li>
+      <li><a href="/categories/tech.html">Бытовая техника</a></li>
     </ul>
   </div>
 </MainLayout>
