--- a/src/pages/guides/deck-building.astro
+++ b/src/pages/guides/deck-building.astro
@@ -30,9 +30,8 @@ import Header from '../../components/Header.astro';
       "datePublished": "2025-11-24",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://ARLIO.ru/guides/build-deck"
-      },
-      "image": "https://ARLIO.ru/images/deck-cover.jpg"
+        "@id": "https://ARLIO.ru/guides/build-deck.html"
+      }
     }
   </script>
 
@@ -43,8 +42,8 @@ import Header from '../../components/Header.astro';
       "@type": "BreadcrumbList",
       "itemListElement": [
         { "@type": "ListItem", "position": 1, "name": "Главная", "item": "https://ARLIO.ru/" },
-        { "@type": "ListItem", "position": 2, "name": "Руководства", "item": "https://ARLIO.ru/guides/" },
-        { "@type": "ListItem", "position": 3, "name": "Как построить террасу/дек", "item": "https://ARLIO.ru/guides/build-deck" }
+        { "@type": "ListItem", "position": 2, "name": "Руководства", "item": "https://ARLIO.ru/guides.html" },
+        { "@type": "ListItem", "position": 3, "name": "Как построить террасу/дек", "item": "https://ARLIO.ru/guides/build-deck.html" }
       ]
     }
   </script>
